databinding task completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,3 +12,9 @@
 <div>
   <app-footercomponent></app-footercomponent>
 </div>
+<div>
+  <h3>Databinding task</h3>
+  <div>
+    <app-databindtask></app-databindtask>
+  </div>
+</div>
