--- a/src/app/mainareacomponent/mainareacomponent.component.html
+++ b/src/app/mainareacomponent/mainareacomponent.component.html
@@ -3,7 +3,7 @@
         <h3 class="content">
             Happiness often comes from the little things
         </h3>
-        <app-databinding></app-databinding>
+        <!-- <app-databinding></app-databinding> -->
     </div>
     <div>
         <img class="contentImage" src="../../assets/4612936 1.svg" alt="">
