practised about directives 1.ngstyle 2.ngclass 3.ngif 4.ngfor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,3 +18,9 @@
     <app-databindtask></app-databindtask>
   </div>
 </div>
+<div>
+  <h1>Directives</h1>
+  <div>
+    <app-directives></app-directives>
+  </div>
+</div>
