data communication between parent and child components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
   <app-headercomponent></app-headercomponent>
 </div>
 <div class="content">
@@ -23,4 +23,5 @@
   <div>
     <app-directives></app-directives>
   </div>
-</div>
+</div> -->
+<app-parent></app-parent>
