--- a/src/app/directives/directives.component.html
+++ b/src/app/directives/directives.component.html
@@ -23,7 +23,7 @@
 <div>
     <p [ngClass]="show?'content':'modifiedContent'">The Kapaleeshwarar Temple in Chennai is one of the popular temples
         in
-        Tamil Nadu. The 7th century Amrirulgu
+        Tamil Nadu. The 7th century Arulmigu
         Kapaleeswarar temple is dedicated to Goddess Parvati in the form of Karpagambal or the Goddess of the
         Wish-Yielding
         Tree and Lord Shiva.</p>
