implementation of parent child data sharing(practising)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,5 +23,14 @@
   <div>
     <app-directives></app-directives>
   </div>
+</div>
+<div>
+  <h1>Data communication between parent and child components</h1>
+  <div>
+    <app-parent></app-parent>
+  </div>
 </div> -->
-<app-parent></app-parent>
+
+<div>
+  <app-users-list></app-users-list>
+</div>
