another way of sharing data

--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -1,7 +1,7 @@
-<h3>
+<!-- <h3>
     Users List
-</h3>
-<ng-container *ngFor="let user of users,index as i">
+</h3> -->
+<!-- <ng-container *ngFor="let user of users,index as i">
     <div class="user">
         <div class="profile">
             <img [src]="user.avatar" alt="">
@@ -14,4 +14,17 @@
             <button class="remove-user" (click)="removeUser(i)">Remove User</button>
         </div>
     </div>
-</ng-container>
+</ng-container> -->
+
+<div class="user">
+    <div class="profile">
+        <img [src]="userData.avatar" alt="">
+    </div>
+    <div class="user-details">
+        <p class="user-name">{{userData.firstName}} {{userData.lastName}}</p>
+        <p class="user-email">{{userData.email}}</p>
+    </div>
+    <div class="cta">
+        <button class="remove-user" (click)="removeUser()">Remove User</button>
+    </div>
+</div>
