--- a/src/app/to-do-list/to-do-list.component.html
+++ b/src/app/to-do-list/to-do-list.component.html
@@ -4,13 +4,16 @@
 
 <div class="todoList">
     <div class="listHead">
-        <h2>
+        <h2 class="heading">
             My To Do List
         </h2>
     </div>
-    <div class="list" *ngFor="let task of taskList">
-        <input type="checkbox" [(ngModel)]="isCheck" name="" id="">
-        <label [ngStyle]="{'text-decoration':isCheck?'line-through':'none'}" class="taskData">{{task}}</label>
+    <ng-container>
+        <div class="list" *ngFor="let task of taskList">
+            <input type="checkbox" [(ngModel)]="isCheck" name="" id="">
+            <label [ngStyle]="{'text-decoration':isCheck?'line-through':'none','color':isCheck?'red':'black'}"
+                class="taskData">{{task}}</label>
 
-    </div>
+        </div>
+    </ng-container>
 </div>
