--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-<!-- <div>
+<div>
   <app-headercomponent></app-headercomponent>
 </div>
 <div class="content">
   <div class="mainArea">
-    <app-mainareacomponent></app-mainareacomponent>
+    <router-outlet></router-outlet>
+
   </div>
   <div class="sidebar">
     <app-sidebarcomponent></app-sidebarcomponent>
@@ -12,7 +13,7 @@
 <div>
   <app-footercomponent></app-footercomponent>
 </div>
-<div>
+<!--<div>
   <h3>Databinding task</h3>
   <div>
     <app-databindtask></app-databindtask>
@@ -36,6 +37,6 @@
 </div> -->
 
 
-<div>
+<!-- <div>
   <app-to-do-list></app-to-do-list>
-</div>
+</div> -->
