routing practice about yesterday class

--- a/src/app/sidebarcomponent/sidebarcomponent.component.html
+++ b/src/app/sidebarcomponent/sidebarcomponent.component.html
@@ -1,3 +1,5 @@
 <div class="sideMenu">
-    sidemenu
+    <a routerLink="home">Home</a>
+    <a routerLink="/aboutus">About Us</a>
+    <a routerLink="/contactus">Contact Us</a>
 </div>
