--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -1,5 +1,23 @@
 <!-- <app-user-details [users]="usersList" (removeUserData)="userRemoval($event)"></app-user-details> -->
 <h3>Users List</h3>
-<ng-container *ngFor="let user of usersList,index as i">
+<span (click)="addUserForm()">Add user</span>
+<!-- <ng-container *ngFor="let user of usersList,index as i">
     <app-user-details [userData]="user" [userIndex]="i" (removeUserData)="userRemoval($event)"></app-user-details>
-</ng-container>
+</ng-container> -->
+<table>
+    <tr>
+        <th>S.no</th>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Action</th>
+    </tr>
+    <tr *ngFor="let user of usersList,index as i">
+        <td>{{i+1}}</td>
+        <td>{{user.name}}</td>
+        <td>{{user.email}}</td>
+        <td>
+            <span (click)="editUser(user.id)">Edit</span>
+            <span (click)="deleteUser(user.id)">Delete</span>
+        </td>
+    </tr>
+</table>
