crud with database

--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -13,7 +13,7 @@
     </tr>
     <tr *ngFor="let user of usersList,index as i">
         <td>{{i+1}}</td>
-        <td>{{user.name}}</td>
+        <td>{{user.username}}</td>
         <td>{{user.email}}</td>
         <td>
             <span (click)="editUser(user.id)">Edit</span>
