--- a/src/app/form/form.component.scss
+++ b/src/app/form/form.component.scss
@@ -43,6 +43,8 @@
     .error-danger{
         color: red;
         font-size: 12px;
+        font-family: 'Poppins';
+        padding-top: 5px;
     }
 }
 .backlink{
