--- a/src/app/users-list/users-list.component.scss
+++ b/src/app/users-list/users-list.component.scss
@@ -5,12 +5,15 @@
     flex-direction: column;
     align-items: center;
     .adduserBtn {
-        font-size: 20px;
-        font-family: 'Poppins';
+        font-size: 16px;
+        width: 100px;
+        height: 24px;
+        font-family: "Poppins";
         background-color: rgb(106, 52, 106);
         color: white;
-        border-radius: 10px;
+        border-radius: 17px;
         padding: 5px;
+        text-align: center;
         cursor: pointer;
     }
     
