--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<div>
+<!-- <div>
   <app-headercomponent></app-headercomponent>
-</div>
-<div class="content">
+</div> -->
+<!-- <div class="content">
   <div class="mainArea">
-    <router-outlet></router-outlet>
 
   </div>
   <div class="sidebar">
@@ -12,7 +11,7 @@
 </div>
 <div>
   <app-footercomponent></app-footercomponent>
-</div>
+</div> -->
 <!--<div>
   <h3>Databinding task</h3>
   <div>
@@ -35,6 +34,8 @@
 <!-- <div>
   <app-users-list></app-users-list>
 </div> -->
+<router-outlet></router-outlet>
+
 
 
 <!-- <div>
